# semio_msgs_ros

./: CMakeLists.txt  Readme.md  mainpage.dox  package.xml
msg/: AttentionRecognitionHumanoidItem.msg  AttentionRecognitionJointItem.msg  AttentionRecognitionResult.msg  AttentionRecognitionTopNItem.msg  AttentionTarget.msg  AttentionTargets.msg  DeicticRecognitionHumanoidItem.msg  DeicticRecognitionResult.msg  DeicticRecognitionSourceItem.msg  DeicticRecognitionTopNItem.msg  DeicticTargets.msg  Humanoid.msg  HumanoidJoint.msg  Humanoids.msg  SpeechRecognitionAlternative.msg  SpeechRecognitionResult.msg  SpeechRecognitionResultList.msg  SpeechSynthesisUtterance.msg
